MAINTAINERCLEANFILES = Makefile.in
ACLOCAL_AMFLAGS = -I m4

lib_LTLIBRARIES = libco2-base-1.0.la
libco2_base_1_0_ladir=$(includedir)/co2-base-1.0/co2

libco2_base_1_0_la_SOURCES = co2/List.c co2/String.c co2/Iterator.c co2/ListIterator.c co2/RefObject.c co2/ReleasePool.c co2/ReleasePoolItem.c
libco2_base_1_0_la_HEADERS = co2/List.h co2/String.h co2/Iterator.h co2/ListIterator.h co2/RefObject.h co2/ReleasePool.h co2/ReleasePoolItem.h

libco2_base_1_0_la_CPPFLAGS = -I$(top_srcdir)/include
