library_includedir=$(includedir)/co2-1.0/co2
library_include_HEADERS = co2/Object.h co2/List.h co2/String.h co2/Hash.h co2/utils.h co2/LinkedList.h co2/ListList.h co2/Interface.h co2/Singleton.h co2/Iterator.h co2/ListIterator.h co2/Thread.h co2/RefArray.h co2/RefObject.h co2/ReleasePool.h co2/ReleasePoolItem.h co2/Array.h co2/ArrayList.h co2/exception.h

