MAINTAINERCLEANFILES = Makefile.in
ACLOCAL_AMFLAGS = -I m4

lib_LTLIBRARIES = libco2-1.0.la
libco2_1_0_ladir=$(includedir)/co2-1.0/co2

libco2_1_0_la_SOURCES = co2/Object.c co2/List.c co2/String.c co2/utils.c co2/Interface.c co2/Singleton.c co2/Iterator.c co2/ListIterator.c co2/RefObject.c co2/ReleasePool.c co2/ReleasePoolItem.c co2/exception.c
libco2_1_0_la_HEADERS = co2/Object.h co2/List.h co2/String.h co2/utils.h co2/Interface.h co2/Singleton.h co2/Iterator.h co2/ListIterator.h co2/RefObject.h co2/ReleasePool.h co2/ReleasePoolItem.h co2/exception.h

libco2_1_0_la_CPPFLAGS = -I$(top_srcdir)/include
