MAINTAINERCLEANFILES = Makefile.in
ACLOCAL_AMFLAGS = -I m4

lib_LTLIBRARIES = libco2-1.0.la
libco2_1_0_ladir=$(includedir)/co2-1.0/co2

libco2_1_0_la_SOURCES = co2/Object.c co2/utils.c co2/exception.c co2/Interface.c
libco2_1_0_la_HEADERS = co2/Object.h co2/utils.h co2/exception.h co2/Interface.h

libco2_1_0_la_CPPFLAGS = -I$(top_srcdir)/include
